tests/src/frontend/typechecking/invalid/named_arg_reverse.sk
class X{a: Int, b: Float}

fun main(): void {
  a = 10;
  b = 1;
  _ = X{b => b, a => a};
  print_string("Hello Skip!")
}
